--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,5 @@
 .header{
+	min-width: 100%;
 	margin: 10px auto 20px;
 }
 .header__logo-image{
@@ -15,6 +16,7 @@
 	position:absolute
 }
 .nav{
+	margin-top: 15px;
 	background-color: rgb(71, 89, 255, 0.8);
 }
 
@@ -23,6 +25,7 @@
 	display: flex;
 	justify-content: space-around;
 }
+
 .nav__item{
 	display: flex;
 	justify-content: center;
