--- a/src/components/field/field.css
+++ b/src/components/field/field.css
@@ -5,3 +5,12 @@
 	justify-content: space-between;
 	min-height: 208px;
 }
+@media (max-width:650px){
+	.field{
+	
+		margin: 40px auto 0;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+	}
+}
