--- a/src/components/field/lastresult/lastresult.css
+++ b/src/components/field/lastresult/lastresult.css
@@ -1,8 +1,9 @@
 .lastresult__list{
+	min-width: 25%;
 	display: flex;
 	flex-direction: column;
-	width: 25%;
 	padding-right: 5px;
+	margin-right: 10px;
 }
 .lastresult__link{
 	min-width:100%;
@@ -26,13 +27,12 @@
 }
 .lastresult__link_brand{
 	display: block;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 600;
-	letter-spacing: 3px;
 }
 .lastresult__link_model{
 	display: block;
-	font-size: 22px;
+	font-size: 18px;
 	margin: auto 10px;
 }
 .lastresult__link_year{
@@ -44,4 +44,61 @@
 	letter-spacing: 4px;
 	align-self: center;
 	color: rgb(255, 0, 0);
+}
+
+@media (max-width:840px){
+	.lastresult__list{
+		min-width: 30%;
+	}
+}
+
+@media (max-width: 780px){
+
+	.lastresult__link_brand{
+		font-size: 12px;
+		font-weight: 600;
+		letter-spacing: 2px;
+	}
+	.lastresult__link_model{
+		font-size: 16px;
+		
+	}
+	.lastresult__link_year{
+	
+		font-size: 16px;
+	}
+	.lastresult__vincode{
+		font-size: 10px;
+		letter-spacing: 2px;
+	}
+	.lastresult__link{
+
+		justify-content: baseline;
+		line-height: 10px;
+		padding: 9px 0;
+	}
+	.lastresult__list{
+		min-width: 30%;
+	}
+}
+
+@media(max-width:650px){
+	.lastresult__list{
+		min-width: 50%;
+	}
+}
+
+@media (max-width:600px){
+	.lastresult__list{
+		padding-right: 0;
+	}
+
+	.lastresult__vincode{
+		font-size: 11px;
+		letter-spacing: 2px;
+	}
+	.lastresult__link_model{
+		font-size: 15px;
+		margin: auto 10px;
+	}
 }
