--- a/src/components/field/result/result.css
+++ b/src/components/field/result/result.css
@@ -6,7 +6,8 @@
 	overflow :hidden;
 	align-items: center;
 	margin-left: 15px;
-	width: calc( 75% - 5vh);
+	margin-right: 10px;
+	min-width: calc( 75% - 5vh);
 	border: 1px solid rgb(177, 177, 177);
 }
 
@@ -18,7 +19,8 @@
 	overflow :hidden;
 	align-items: center;
 	margin-left: 15px;
-	width: calc( 75% - 5vh);
+	margin-right: 15px;
+	min-width: calc( 75% - 5vh);
 	border: 1px solid rgb(177, 177, 177);
 }
 .result__tablet-active:hover{
@@ -33,24 +35,28 @@
 	font-family:  cursive;
 }
 .result__text-brand{
-	align-self: flex-end;
 	font-size: 30px;
 	font-weight: 700;
 	font-family: 'Times New Roman', Times, serif;
 	color:rgb(58, 58, 58);
 	margin-right: 30px;
+	align-self: center;
+	
 } 
 .result__text-model{
-	font-size: 50px;
+	font-size: 30px;	
 	font-weight: 500;
 	color: rgb(58, 58, 58);
 	margin-right: 30px;
+	align-self: center;
+
 }
 .result__text-year{
 	font-size: 25px;
 	font-weight: 500;
 	color: rgb(58, 58, 58);
 	margin-right: 30px;
+	align-self: center;
 }
 .result__text-error{
 	font-size: 25px;
@@ -58,4 +64,77 @@
 	line-height: 50px;
 	text-align: center;
 	color: rgb(255, 0, 0);
+}
+
+@media(max-width:840px){
+	.result__tablet-active, .result__tablet-nonactive{
+		min-width: calc( 70% - 5vh);
+		min-height: 100px;
+	}
+
+	.result__text{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.result__text-brand, .result__text-model{
+		margin-bottom: 15px;
+	}
+}
+
+@media (max-width: 780px){
+	.result__tablet-active, .result__tablet-nonactive{
+		min-width: calc( 70% - 7vh);
+	}
+	.result__text-error{
+		font-size: 20px;
+	}
+
+	.result__text-error{
+		font-size: 25px;
+		font-weight: 500;
+		line-height: 50px;
+		text-align: center;
+	}
+}
+
+@media (max-width: 650px){
+	.result__tablet-active, .result__tablet-nonactive{
+		min-width: 400px;
+		margin-bottom: 30px;
+	}
+
+	.result__text-error{
+		font-size: 20px;
+		line-height: 25px;
+		text-align: center;
+	}
+	.result__text-brand{
+		margin: 15px 0;
+		text-align: center;
+		font-size: 20px;
+		letter-spacing: 3px;
+	} 
+	.result__text-model{
+		margin: 0;
+		font-size: 25px;
+		font-weight: 500;
+		letter-spacing: 3px;
+	}
+	.result__text-year{
+		margin: 15px 0 ; ;
+		justify-self: center;
+		font-size: 20px;
+		letter-spacing: 3px;
+	}
+}
+
+@media (max-width: 420px){
+	.result__tablet-active, .result__tablet-nonactive{
+		min-width: 320px;
+	}
+	.result__text-error{
+		font-size: 14px;
+		line-height: 20px;
+	}
 }
