--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -37,3 +37,34 @@
 	padding: 0 15px;
 	margin-left: 5px;
 }
+@media (max-width: 780px){
+	.form{
+		margin-top: 20px;
+		min-width: 80%;
+	}
+	.form__input{
+		min-width: 55%;
+		padding: 0px 5px 0px 15px;
+		background-color: rgb(255, 255, 255);
+		font-size: 18px;
+		line-height: 30px;
+	}
+	.form__btn{
+		min-width: 15%;
+		font-size: 15px;
+	}
+}
+
+@media(max-width:550px){
+	.form{
+		flex-direction: column;
+	}
+	.form__input{
+		margin-bottom: 10px;
+	}
+	.form__btn{
+		display: inline-block;
+		padding: 10px 0;
+		margin:0;
+	}
+}
