--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,3 +40,30 @@
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+@media (max-width: 780px){
+	.header__title{
+		font-size: 40px;
+	}
+	.nav__link{
+		font-size: 15px;
+	}
+}
+
+
+@media(max-width:450px){
+	.header__title{
+		left: 25%;
+		font-size: 35px;
+		margin-top: 15px;
+		color: red;
+		transform: rotate(-5deg);
+		position:absolute
+	}
+	.header__logo-image{
+		display: inline-flex;
+		max-width: 70%;
+	}
+	.nav__link{
+		font-size: 12px;
+	}
+}
