--- a/src/pages/styles/variablesPage.css
+++ b/src/pages/styles/variablesPage.css
@@ -1,9 +1,10 @@
 .variables-page{
-	display: inline-flex;
+	min-height: 100%;
+	display:flex;
 	flex-direction: column;
-	align-content: flex-end;
-	justify-content: flex-end;
-
+	min-width: 280px;
+	justify-content: flex-start;
+	flex: 1 1
 }
 .variables-page__option-title::first-line{
 	color: rgb(0, 72, 136);
