--- a/src/pages/styles/variablesPage.css
+++ b/src/pages/styles/variablesPage.css
@@ -6,17 +6,23 @@
 	justify-content: flex-start;
 	flex: 1 1
 }
-.variables-page__option-title::first-line{
+.variables-page__option-title{
 	color: rgb(0, 72, 136);
-	font-size: 16px;
+	font-size: 14px;
+	line-height: 24px;
 	font-weight: 700;
-	text-decoration: underline;
+	flex-wrap: nowrap;
+	text-align: center;
+}
+.variables-page__option-title{
 	text-align: center;
 }
 .variables-page__option-description{
-	margin: 5px 0 10px;
+	pointer-events: none;
+	background-color: #e3e3e3;
 	text-align: center;
 	font-size: 12px;
+	line-height: 20px;
 	font-weight: 500;
 	color: rgb(0, 0, 0);
 	
